<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.progreso.ProgresoFragment">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/Dieta_de_hoy_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="25dp"
            android:text="@string/Dieta_del_dia" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart_Dietas_Del_Dia"
            android:layout_width="match_parent"
            android:layout_height="304dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Calorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:text="@string/calorias_text" />

            <TextView
                android:id="@+id/Calorias_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  82782 Kcal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HidratosDeCarbono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/hidratosDeCarbono_text" />

            <TextView
                android:id="@+id/HidratosDeCaborno_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  130 g" />

            <TextView
                android:id="@+id/Proteinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/proteinas_text" />

            <TextView
                android:id="@+id/Proteinas_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  100 g" />

            <TextView
                android:id="@+id/Grasas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/grasas_text" />

            <TextView
                android:id="@+id/Grasas_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  100 g" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/desayuno_dieta_dia"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="Boton_Pulsado_DietaDelDia"
            android:text="@string/Desayuno" />

        <Button
            android:id="@+id/almuerzo_dieta_dia"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="Boton_Pulsado_DietaDelDia"
            android:text="@string/Almuerzo" />

        <Button
            android:id="@+id/merienda_dieta_dia"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="Boton_Pulsado_DietaDelDia"
            android:text="@string/Merienda" />

        <Button
            android:id="@+id/cena_dieta_dia"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:onClick="Boton_Pulsado_DietaDelDia"
            android:text="@string/Cena" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>