<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="710dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/Info_nutricional_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Informacion nutricional de la comida"
            android:textSize="30dp" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart_Comida"
            android:layout_width="match_parent"
            android:layout_height="348dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Calorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/calorias_text" />

            <TextView
                android:id="@+id/Calorias_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  82782 Kcal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HidratosDeCarbono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/hidratosDeCarbono_text" />

            <TextView
                android:id="@+id/HidratosDeCaborno_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  130 g" />

            <TextView
                android:id="@+id/Proteinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/proteinas_text" />

            <TextView
                android:id="@+id/Proteinas_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  100 g" />

            <TextView
                android:id="@+id/Grasas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/grasas_text" />

            <TextView
                android:id="@+id/Grasas_C"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  100 g" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />


        <TextView
            android:id="@+id/Lista_de_platos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="Platos a tomar"
            android:gravity="center"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ListaComidas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>