<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="710dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">


        <TextView
            android:id="@+id/Info_nutricional_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30dp"
            android:text="Alimento" />

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/piechart_alimento"
            android:layout_width="match_parent"
            android:layout_height="348dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Calorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:text="@string/calorias_text" />

            <TextView
                android:id="@+id/Calorias_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="  82782 Kcal" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/Confirmar_text"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:gravity="center"
            android:text="@string/Confirmar_text"
            android:textSize="25dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/Si_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boton_si"
                android:onClick="BotonPulsadoInfoNutricionalAlimento"/>

            <Button
                android:id="@+id/No_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/boton_no"
                android:onClick="BotonPulsadoInfoNutricionalAlimento"/>
        </LinearLayout>

        <Button
            android:id="@+id/Boton_equivalente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Elegir_equivalente"
            android:onClick="BotonPulsadoInfoNutricionalAlimento"/>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Elegir_cantidad"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Elegir otra cantidad a tomar" />

            <LinearLayout
                android:layout_width="82dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/cantidad_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="84dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number" />

                <Button
                    android:id="@+id/boton_cantidadConfirmar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Confirmar"
                    android:onClick="BotonPulsadoInfoNutricionalAlimento"/>
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>